<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <FrameLayout
        android:id="@+id/frameContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/backgroundMain">
    
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="50dp"
                    android:src="@mipmap/ic_launcher_round"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:focusable="true"
                    android:clickable="true" />
    
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/uploadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/stat_sys_upload"
                    app:backgroundTint="@color/tender_pink"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                    app:layout_constraintEnd_toEndOf="@+id/profile_image"
                    app:layout_constraintTop_toTopOf="@+id/profile_image"
                    app:layout_constraintVertical_bias="1.0" />
    
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="?attr/backgroundGrey"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/profile_image">
    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:text="ABOUT ME"
                        android:textColor="?attr/textColor"
                        android:textSize="20sp" />
    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/backgroundMain">
    
                        <EditText
                            android:id="@+id/editTextAboutMe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:fontFamily="@font/proxima_nova_regular"
                            android:hint="Write something about yourself so others can know you"
                            android:textColor="?attr/textColor"
                            android:textColorHint="?attr/textColor"
                            android:textSize="20sp" />
    
                    </LinearLayout>
    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:text="GENDER"
                        android:textColor="?attr/textColor"
                        android:textSize="20sp" />
    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/backgroundMain">
    
                        <Spinner
                            android:id="@+id/spinner_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="15dp"
                            android:entries="@array/genders"
                            android:paddingVertical="15dp" />
    
                    </LinearLayout>
    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:text="SEXUAL PREFERENCE"
                        android:textColor="?attr/textColor"
                        android:textSize="20sp" />
    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/backgroundMain">
    
                        <Spinner
                            android:id="@+id/spinner_preferences"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="15dp"
                            android:entries="@array/preference"
                            android:paddingVertical="15dp" />
                    </LinearLayout>
    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/proxima_nova_bold"
                        android:text="AGE RANGE"
                        android:textColor="?attr/textColor"
                        android:textSize="20sp" />
    
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/backgroundMain"
                        android:orientation="vertical">
    
                        <com.google.android.material.slider.RangeSlider
                            android:id="@+id/age_slider"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginEnd="50dp"
                            android:layout_marginRight="50dp"
                            android:hapticFeedbackEnabled="true"
                            android:stepSize="1.0"
                            android:valueFrom="18"
                            android:valueTo="100"
                            app:labelBehavior="withinBounds"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView11"
                            app:values="@array/initial_values" />
    
                        <TextView
                            android:id="@+id/textView_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/age_slider"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/proxima_nova_regular"
                            android:textColor="?attr/metaTextColor"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/age_slider" />
    
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
    
                <android.widget.Button
                    android:id="@+id/save_changes_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/border_radius"
                    android:backgroundTint="?attr/btnColorPink"
                    android:fontFamily="@font/proxima_nova_bold"
                    android:text="SAVE CHANGES"
                    android:textColor="@color/just_white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</FrameLayout>